Install knex via yarn

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/timothyshores/webdb-challenge.git",
   "author": "Timothy Shores",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "knex": "^0.16.5"
+  }
 }
