Install express via yarn

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Timothy Shores",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
     "knex": "^0.16.5",
     "sqlite3": "^4.0.6"
   }
