--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "helmet": "^3.17.0",
     "knex": "^0.16.5",
     "sqlite3": "^4.0.6"
   }
