Installed nodemon as dev dependency via yarn add nodemon --dev. Create POST request endpoint to /api/projects/

--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "webdb-challenge",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/timothyshores/webdb-challenge.git",
-  "author": "Timothy Shores",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.16.4",
-    "helmet": "^3.17.0",
-    "knex": "^0.16.5",
-    "sqlite3": "^4.0.6"
-  }
+    "name": "webdb-challenge",
+    "version": "1.0.0",
+    "repository": "https://github.com/timothyshores/webdb-challenge.git",
+    "author": "Timothy Shores",
+    "license": "ISC",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "server": "nodemon index.js"
+    },
+    "dependencies": {
+        "express": "^4.16.4",
+        "helmet": "^3.17.0",
+        "knex": "^0.16.5",
+        "sqlite3": "^4.0.6"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.0"
+    }
 }
